# Bartonos-omni

./: .gitignore  Makefile  README.md  pyproject.toml
agents/: README.md
bots/: README.md  alert_bot.md  data_pipeline_bot.md  integration_bot.md  monitoring_bot.md  recovery_bot.md
examples/tasks/: 01_demo.json  02_repo_ingest.json  03_bot_monitor.json  04_ai_integration.json  05_eval_suite.json  06_policy.json  07_fast_mode.json  08_receipts.json
tests/: test_orchestrator.py  test_policy.py  test_workflow.py
warforge/: __init__.py  api.py  cli.py  config.py  core.py  orchestrator.py  policy.py  providers.py  receipts.py  storage.py  verification.py
warforge/agents/: ai_integrations.py  base.py  bots_automation.py  eval_quality.py  implementer.py  ops_observability.py  orchestration_architect.py  planner.py  repo_analyst.py  reviewer.py  router.py  test_engineer.py
warforge/templates/: provider_interface.md  tool_schema.json
workflows/: README.md  supervisor.md  swarm.md
