[project]
name = "warforge"
version = "0.1.0"
description = "Warforge Speed: multi-agent orchestration and AI coding platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "typer>=0.9.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
warforge = "warforge.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
